[package]
name = "TriggersFrontend"
version = "0.1.0"
authors = ["Paarijaat Aditya <paarijaat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.*", features = ["full"] }
futures = "0.3.*"
log = "0.4.*"
env_logger = "0.7.*"
tokio-amqp = "0.1.3"
lapin = "1.2.8"
actix-web = "3"
chrono = "0.4"
bytes = "0.5.6"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12.4"
reqwest = "0.10.*"
rumqttc = "0.1.2"