[metadata]
name = mfn_cli
version = attr: mfn_cli.__version__
author = The KNIX authors
author_email = knix-dev@list.nokia.com
description = KNIX MicroFunctions Command Line Interface
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
url = https://github.com/knix-microfunctions/knix
license = Apache-2.0

[options]
packages = mfn_cli
python_requires = >=3.6
install_requires =
    mfn_sdk >= "auto"
    click

[options.entry_points]
console_scripts =
    mfn = mfn_cli.cli:cli
