[metadata]
name = mfn_sdk
version = attr: mfn_sdk.__version__
author = The KNIX authors
author_email = knix-dev@list.nokia.com
description = MicroFunctions Client SDK
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
url = https://github.com/knix-microfunctions/knix
license = Apache-2.0

[options]
packages = mfn_sdk
python_requires = >=3.6
install_requires =
    requests
    urllib3
